force-app/main/default/objects/Account/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Animal Behavior College Certified Dog Trainer or Animal Behavior College Certified Cat Trainer</inlineHelpText>
    <label>ABCCDT or ABCCCT</label>
    <type>Checkbox</type>
</CustomField>