force-app/main/default/objects/Account/fields/ACAAB__c.field-meta.xml
<CustomField>
    <fullName>ACAAB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Associate Certified Applied Animal Behaviorist</inlineHelpText>
    <label>ACAAB</label>
    <type>Checkbox</type>
</CustomField>