force-app/main/default/objects/Account/fields/Academia_File_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Academia_File_Content_Document_Id__c</fullName>
    <label>Academia File Content Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>