force-app/main/default/objects/Account/fields/Academia_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Academia_Job_Title__c</fullName>
    <label>Academia Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Teacher/Professor</fullName>
            </value>
            <value>
                <fullName>Veterinary Teaching Hospital Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>