force-app/main/default/objects/Account/fields/Academia_Membership_File_Link__c.field-meta.xml
<CustomField>
    <fullName>Academia_Membership_File_Link__c</fullName>
    <label>Academia Membership File Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>