force-app/main/default/objects/Account/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Code</label>
    <referenceTo>Account_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>