force-app/main/default/objects/Account/fields/Account_Code_Label__c.field-meta.xml
<CustomField>
    <fullName>Account_Code_Label__c</fullName>
    <formula>Account_Code__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Code Label</label>
    <type>Text</type>
</CustomField>