force-app/main/default/objects/Account/fields/Accounting_ID__c.field-meta.xml
<CustomField>
    <fullName>Accounting_ID__c</fullName>
    <label>Accounting ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>