force-app/main/default/objects/Account/fields/Admin_Account__c.field-meta.xml
<CustomField>
    <fullName>Admin_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Account</label>
    <type>Checkbox</type>
</CustomField>