force-app/main/default/objects/Account/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vet - All Species</fullName>
            </value>
            <value>
                <fullName>Vet - Companion Animal</fullName>
            </value>
            <value>
                <fullName>Vet - Farm Animal</fullName>
            </value>
            <value>
                <fullName>Vet - Exotic</fullName>
            </value>
            <value>
                <fullName>Animal Welfare</fullName>
            </value>
            <value>
                <fullName>Animal Training</fullName>
            </value>
            <value>
                <fullName>Animal Grooming</fullName>
            </value>
            <value>
                <fullName>Pet Sitting</fullName>
            </value>
            <value>
                <fullName>Boarding &amp; Daycare</fullName>
            </value>
            <value>
                <fullName>Lab Animal</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Pet Parent</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>