force-app/main/default/objects/Account/fields/AVA_B2BLEX__AvaTaxCompanyIds__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__AvaTaxCompanyIds__c</fullName>
    <label>AvaTax Company Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>