force-app/main/default/objects/Account/fields/AVA_B2BLEX__AvaTaxExemptionCustomerId__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__AvaTaxExemptionCustomerId__c</fullName>
    <description>Use this field to pass unique value to Avatax for exemption. E.g- Account ID or update it as per the need using automation.</description>
    <inlineHelpText>Use this field to pass unique value to Avatax for exemption. E.g- Account ID or update it as per the need using automation.</inlineHelpText>
    <label>AvaTax Exemption Customer Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>