force-app/main/default/objects/Account/fields/AVA_B2BLEX__AvaTaxMessage__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__AvaTaxMessage__c</fullName>
    <description>The return message from Avatax after sending parameters.</description>
    <inlineHelpText>The return message from Avatax after sending parameters.</inlineHelpText>
    <label>AvaTax Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>