force-app/main/default/objects/Account/fields/AVA_B2BLEX__Email__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Email__c</fullName>
    <description>It is used to send the certificate invite and used in all communication. Recommended to have the value.</description>
    <inlineHelpText>It is used to send the certificate invite and used in all communication. Recommended to have the value.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>