force-app/main/default/objects/Account/fields/AVA_B2BLEX__EntityUseCode__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__EntityUseCode__c</fullName>
    <description>Entity use codes indicate the reason for exemption.</description>
    <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
    <label>Entity/Use Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>