force-app/main/default/objects/Account/fields/AVSAB__c.field-meta.xml
<CustomField>
    <fullName>AVSAB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Member of American Veterinary Society of Animal Behavior</inlineHelpText>
    <label>AVSAB</label>
    <type>Checkbox</type>
</CustomField>