force-app/main/default/objects/Account/fields/Billing_Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Deprecated) Billing Email Verified</label>
    <type>Checkbox</type>
</CustomField>