force-app/main/default/objects/Account/fields/Business_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Shipping_Address__c</fullName>
    <label>Business Shipping Address (Deprecated)</label>
    <type>Address</type>
</CustomField>