force-app/main/default/objects/Account/fields/CAAB__c.field-meta.xml
<CustomField>
    <fullName>CAAB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Certified Applied Animal Behaviorist</inlineHelpText>
    <label>CAAB</label>
    <type>Checkbox</type>
</CustomField>