force-app/main/default/objects/Account/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <label>Directory Care Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinary</fullName>
                <default>true</default>
                <label>Veterinary</label>
            </value>
            <value>
                <fullName>Veterinary - Emergency</fullName>
            </value>
            <value>
                <fullName>Veterinary - Mobile</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Groomer</fullName>
            </value>
            <value>
                <fullName>Pet Sitter</fullName>
            </value>
            <value>
                <fullName>Boarding &amp; Daycare</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>