force-app/main/default/objects/Account/fields/CATCH__c.field-meta.xml
<CustomField>
    <fullName>CATCH__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Canine Trainers Academy Certified Dog Trainer</inlineHelpText>
    <label>CATCH</label>
    <type>Checkbox</type>
</CustomField>