force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>CPM Categories</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesia, Sedation</fullName>
            </value>
            <value>
                <fullName>Antibiotics</fullName>
            </value>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Biosecurity</fullName>
            </value>
            <value>
                <fullName>CBD</fullName>
            </value>
            <value>
                <fullName>Compounding</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Diabetic Care</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Enrichment</fullName>
            </value>
            <value>
                <fullName>Epilepsy</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lymphoma</fullName>
            </value>
            <value>
                <fullName>Microchips</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Parasiticides</fullName>
            </value>
            <value>
                <fullName>Pet Genetics</fullName>
            </value>
            <value>
                <fullName>Pheromones</fullName>
            </value>
            <value>
                <fullName>Supplements</fullName>
            </value>
            <value>
                <fullName>Treats</fullName>
            </value>
            <value>
                <fullName>Wound Mgmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>