force-app/main/default/objects/Account/fields/CBCC_KA__c.field-meta.xml
<CustomField>
    <fullName>CBCC_KA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Certified Behavior Counselor Canine</inlineHelpText>
    <label>CBCC-KA</label>
    <type>Checkbox</type>
</CustomField>