force-app/main/default/objects/Account/fields/Certified_Practice__c.field-meta.xml
<CustomField>
    <fullName>Certified_Practice__c</fullName>
    <label>Certified Practice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>