force-app/main/default/objects/Account/fields/Certified_Practice_Status__c.field-meta.xml
<CustomField>
    <fullName>Certified_Practice_Status__c</fullName>
    <description>For Practice Certification: status of certification</description>
    <label>Certified Practice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recertification Year</fullName>
            </value>
            <value>
                <fullName>SA Updates Pending</fullName>
            </value>
            <value>
                <fullName>RRQ Not Met</fullName>
            </value>
            <value>
                <fullName>Renewal Processed</fullName>
            </value>
            <value>
                <fullName>Renewal Pending</fullName>
            </value>
            <value>
                <fullName>Approved for Visit</fullName>
            </value>
            <value>
                <fullName>VOSV Confirmed</fullName>
            </value>
            <value>
                <fullName>VOSV Completed</fullName>
            </value>
            <value>
                <fullName>Recertification Successful</fullName>
            </value>
            <value>
                <fullName>First Year Certified</fullName>
            </value>
            <value>
                <fullName>Attrition</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Provisional Recert</fullName>
            </value>
            <value>
                <fullName>CERTIFIED</fullName>
            </value>
            <value>
                <fullName>Visit Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>