force-app/main/default/objects/Account/fields/Committed_to_PC__c.field-meta.xml
<CustomField>
    <fullName>Committed_to_PC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For consolidators: whether an entire group is committing to all hospitals achieving PC.</description>
    <label>Committed to PC?</label>
    <type>Checkbox</type>
</CustomField>