force-app/main/default/objects/Account/fields/CPDT_KA_or_CPDT_KSA__c.field-meta.xml
<CustomField>
    <fullName>CPDT_KA_or_CPDT_KSA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Certified Professional Dog Trainer</inlineHelpText>
    <label>CPDT-KA or CPDT-KSA</label>
    <type>Checkbox</type>
</CustomField>