force-app/main/default/objects/Account/fields/CTC__c.field-meta.xml
<CustomField>
    <fullName>CTC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Academy for Dog Trainers Graduate or have an Academy for Dog Trainers Certificate in Training and Counseling (CTC) from a former SF SPCA program</inlineHelpText>
    <label>CTC</label>
    <type>Checkbox</type>
</CustomField>