force-app/main/default/objects/Account/fields/CTT_A__c.field-meta.xml
<CustomField>
    <fullName>CTT_A__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Canine Training Technician (Accredited)</inlineHelpText>
    <label>CTT-A</label>
    <type>Checkbox</type>
</CustomField>