force-app/main/default/objects/Account/fields/Current_Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Current_Level_of_Education__c</fullName>
    <label>Current Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>