force-app/main/default/objects/Account/fields/DACVB__c.field-meta.xml
<CustomField>
    <fullName>DACVB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>American College of Veterinary Behaviorists Diplomate</inlineHelpText>
    <label>DACVB</label>
    <type>Checkbox</type>
</CustomField>