force-app/main/default/objects/Account/fields/DCBC__c.field-meta.xml
<CustomField>
    <fullName>DCBC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dogma Certified Behavior Consultant</inlineHelpText>
    <label>DCBC</label>
    <type>Checkbox</type>
</CustomField>