force-app/main/default/objects/Account/fields/Directory_Company__c.field-meta.xml
<CustomField>
    <fullName>Directory_Company__c</fullName>
    <label>Directory Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>