force-app/main/default/objects/Account/fields/Directory_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Directory_Facebook__c</fullName>
    <label>Directory Facebook</label>
    <type>Url</type>
</CustomField>