force-app/main/default/objects/Account/fields/Directory_Instagram__c.field-meta.xml
<CustomField>
    <fullName>Directory_Instagram__c</fullName>
    <label>Directory Instagram</label>
    <type>Url</type>
</CustomField>