force-app/main/default/objects/Account/fields/Directory_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Directory_LinkedIn__c</fullName>
    <label>Directory LinkedIn</label>
    <type>Url</type>
</CustomField>