force-app/main/default/objects/Account/fields/Directory_Listing__c.field-meta.xml
<CustomField>
    <fullName>Directory_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory Listing</label>
    <type>Checkbox</type>
</CustomField>