force-app/main/default/objects/Account/fields/Directory_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Directory_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory Opt-In</label>
    <type>Checkbox</type>
</CustomField>