force-app/main/default/objects/Account/fields/Directory_Radius__c.field-meta.xml
<CustomField>
    <fullName>Directory_Radius__c</fullName>
    <description>Intended for customer use - how far a FF certified member is willing to travel for their services.</description>
    <inlineHelpText>How far is the member willing to travel to provide their services?</inlineHelpText>
    <label>Directory Radius</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>