force-app/main/default/objects/Account/fields/Directory_Species_Avian__c.field-meta.xml
<CustomField>
    <fullName>Directory_Species_Avian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory Species Avian</label>
    <type>Checkbox</type>
</CustomField>