force-app/main/default/objects/Account/fields/Directory_Species_Equine__c.field-meta.xml
<CustomField>
    <fullName>Directory_Species_Equine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory Species Equine</label>
    <type>Checkbox</type>
</CustomField>