force-app/main/default/objects/Account/fields/Directory_Title__c.field-meta.xml
<CustomField>
    <fullName>Directory_Title__c</fullName>
    <description>The title that shows up on the directory listing</description>
    <label>Directory Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>