force-app/main/default/objects/Account/fields/Directory_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Directory_Twitter__c</fullName>
    <label>Directory Twitter</label>
    <type>Url</type>
</CustomField>