force-app/main/default/objects/Account/fields/Directory_URL__c.field-meta.xml
<CustomField>
    <fullName>Directory_URL__c</fullName>
    <label>Directory URL</label>
    <type>Url</type>
</CustomField>