force-app/main/default/objects/Account/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <description>Discount code provided to current CPMs and/or PPPs</description>
    <label>Discount Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>