force-app/main/default/objects/Account/fields/Do_Not_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Sales &amp; PC: notate what person and business accounts should not be invoiced.</description>
    <label>Do Not Invoice</label>
    <type>Checkbox</type>
</CustomField>