force-app/main/default/objects/Account/fields/Elite__c.field-meta.xml
<CustomField>
    <fullName>Elite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elite</label>
    <type>Checkbox</type>
</CustomField>