force-app/main/default/objects/Account/fields/Elite_Achieved_Data__c.field-meta.xml
<CustomField>
    <fullName>Elite_Achieved_Data__c</fullName>
    <label>Elite Achieved Data</label>
    <type>Date</type>
</CustomField>