force-app/main/default/objects/Account/fields/Entity_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>Entity_Use_Code__c</fullName>
    <label>Entity Use Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>