force-app/main/default/objects/Account/fields/Estimated_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Graduation_Date__c</fullName>
    <label>Estimated Graduation Date</label>
    <type>Date</type>
</CustomField>