force-app/main/default/objects/Account/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faculty</label>
    <type>Checkbox</type>
</CustomField>