force-app/main/default/objects/Account/fields/Faculty_Exp__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Exp__c</fullName>
    <label>Faculty Exp</label>
    <length>80</length>
    <type>Text</type>
</CustomField>