force-app/main/default/objects/Account/fields/First_Time_Login_Product__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Login_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Time Login Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>