force-app/main/default/objects/Account/fields/From_Kustomer__c.field-meta.xml
<CustomField>
    <fullName>From_Kustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Kustomer?</label>
    <type>Checkbox</type>
</CustomField>