force-app/main/default/objects/Account/fields/Has_Business__c.field-meta.xml
<CustomField>
    <fullName>Has_Business__c</fullName>
    <formula>IF(ISBLANK(Business__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Business</label>
    <type>Checkbox</type>
</CustomField>