force-app/main/default/objects/Account/fields/Have_Active_Membership__c.field-meta.xml
<CustomField>
    <fullName>Have_Active_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Active Membership?</label>
    <type>Checkbox</type>
</CustomField>