force-app/main/default/objects/Account/fields/Historical_Admin__c.field-meta.xml
<CustomField>
    <fullName>Historical_Admin__c</fullName>
    <label>Historical Admin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>