force-app/main/default/objects/Account/fields/Historical_Jobs_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Historical_Jobs_Assigned__c</fullName>
    <label>Historical Jobs Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Succesful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>