force-app/main/default/objects/Account/fields/Historical_Primary_Group__c.field-meta.xml
<CustomField>
    <fullName>Historical_Primary_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Primary Group</label>
    <type>Checkbox</type>
</CustomField>