force-app/main/default/objects/Account/fields/IAABC__c.field-meta.xml
<CustomField>
    <fullName>IAABC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Certified Behavior Consultant through IAABC (Certified Behavior Consultant Certified in the Dog, Cat, Horse or Avian Species or Certified Shelter Behavior Professional)</inlineHelpText>
    <label>IAABC</label>
    <type>Checkbox</type>
</CustomField>