force-app/main/default/objects/Account/fields/IndividualLevelRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>IndividualLevelRenewalDate__c</fullName>
    <label>IndividualLevelRenewalDate</label>
    <type>Date</type>
</CustomField>