force-app/main/default/objects/Account/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <description>For certified practices: status of initial and annual invoices.</description>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Due Yet</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Due Next Year</fullName>
            </value>
            <value>
                <fullName>Renewal Submitted</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Recert Invoice Paid</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
            <value>
                <fullName>Paid with Extension</fullName>
            </value>
            <value>
                <fullName>Declined to Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>