force-app/main/default/objects/Account/fields/Invoice_Stripe_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Stripe_Id__c</fullName>
    <label>Invoice Stripe Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>