force-app/main/default/objects/Account/fields/Invoicing_Customer_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Customer_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/test/customers/&quot; &amp;  Invoice_Stripe_Id__c, &quot;View Customer in Stripe&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Customer URL</label>
    <type>Text</type>
</CustomField>